develop/minio/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: example-eks-cluster=alb
    alb.ingress.kubernetes.io/certificate-arn: [AWS-ARN] # aws certificate develop-twin
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/success-codes: "200,403"
    alb.ingress.kubernetes.io/ssl-redirect: "443" #Uncomment this 2 lines for
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]' #redirection from http to https
spec:
  ingressClassName: alb
  rules:
    - host: [HOST] #Replace with the actual DNS that want to assign to the load balancer for console
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio #Replace minio-tenant-1 with the namespace of the tenant
                port:
                  name: minio-console
    - host: [HOST] #Replace with the actual DNS that want to assign to the load balancer for minio API
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: minio-api
